[package]
name = "tenantm"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
prost = "0.13.2"
tokio = { version = "1.40.0", features = ["full"] }
messengerc = { git = "https://github.com/bennekrouf/messengerc.git" }
tonic = "0.12.2"
tracing = "0.1.40"
chrono = "0.4.38"

[build-dependencies]
tonic-build = "0.12.2"
